--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,9 @@
   margin: 0;
   padding: 0;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-family: 'Poppins', sans-serif;
   color: #f0f0f0;
@@ -41,7 +43,9 @@ body::before {
   position: relative;
   overflow: hidden;
 }
-
+br{
+  color: #ffffff;
+}
 .hero h1 {
   font-size: 3em;
   margin-bottom: 0.3em;
@@ -78,6 +82,16 @@ body::before {
 section {
   padding: 80px 20px;
 }
+h1 
+{
+  font-size: 2.8em;
+  margin-bottom: 0.5em;
+  color: #caa7ff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
 
 h2 {
   font-size: 2.2em;
@@ -113,7 +127,7 @@ h2 {
 
 .project-card img {
   width: 100%;
-  height: 150px;
+  height: 140px;
   object-fit: cover;
   border-radius: 8px;
   margin-bottom: 15px;
@@ -175,5 +189,15 @@ footer {
 @media (max-width: 600px) {
   .hero h1 { font-size: 2.2em; }
   h2 { font-size: 1.8em; }
-  .project-card img { height: 120px; }
+  .project-card{
+    height: 350px;
+  }
+    .project-card {
+  width: 100%;
+  height: 360px;
+}
+  .project-card img {
+  width: 100%;
+  height: 230px;
+}
 }
