--- a/styles.css
+++ b/styles.css
@@ -209,7 +209,23 @@ h2 {
   max-width: 1200px;
   margin: 0 auto;
 }
-
+.another-projects .project-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 25px;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+.another-projects .project-list .project-card {
+  height: auto;
+  width: auto;
+  background: #2e004f;
+  padding: 20px;
+  border-radius: 12px;
+  transition: transform 0.3s, box-shadow 0.3s;
+  position: relative;
+  overflow: hidden;
+}
 .project-card {
   background: #2e004f;
   padding: 20px;
@@ -242,8 +258,9 @@ ul li:hover {
 
 .project-card img {
   width: 100%;
-  height: 140px;
+  height: 130px;
   object-fit: cover;
+  
   border-radius: 8px;
   margin-bottom: 15px;
 }
