--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,14 @@ body {
   position: relative;
   overflow-x: hidden;
 }
-
+.header-info {
+  font-weight: 400;
+  font-size: 2.5em;
+  color: #caa7ff;
+  display: block;
+  text-align: center;
+  margin: 10px ;
+}
 /* Background Animation (enhanced) */
 :root{
   --bg-1: rgba(106,13,173,0.18);
@@ -216,7 +223,7 @@ h2 {
 
 .project-card img {
   width: 100%;
-  height: 130px;
+  height: auto;
   object-fit: cover;
   
   border-radius: 8px;
@@ -254,7 +261,7 @@ ul li:hover {
 
 .project-card img {
   width: 100%;
-  height: 130px;
+  height: auto;
   object-fit: cover;
   
   border-radius: 8px;
